feat: adjusted the table structure of oceanbase, supported filter, and fixed deletion errors