@@ -25,6 +25,7 @@ import org.springframework.ai.embedding.EmbeddingModel;
 import org.springframework.ai.transformers.TransformersEmbeddingModel;
 import org.springframework.ai.vectorstore.SearchRequest;
 import org.springframework.ai.vectorstore.VectorStore;
+import org.springframework.ai.vectorstore.filter.Filter;
 import org.springframework.ai.vectorstore.observation.DefaultVectorStoreObservationConvention;
 import org.springframework.ai.vectorstore.observation.VectorStoreObservationContext;
 import org.springframework.boot.autoconfigure.AutoConfigurations;
@@ -65,7 +66,7 @@ import static org.hamcrest.Matchers.hasSize;
 @EnabledIfEnvironmentVariable(named = "OCEANBASE_PASSWORD", matches = ".+")
 class OceanBaseVectorTest {
 
-	private static final String IMAGE = "oceanbase/oceanbase-ce:4.3.5.1-101000042025031818";
+	private static final String IMAGE = "oceanbase/oceanbase-ce:latest";
 
 	private static final String HOSTNAME = "oceanbase_test";
 
@@ -139,8 +140,6 @@ class OceanBaseVectorTest {
 					"spring.ai.vectorstore.oceanbase.password=" + PASSWORD,
 					"spring.ai.vectorstore.oceanbase.tableName=" + OCEANBASE_DATABASE)
 			.run(context -> {
-				var properties = context.getBean(OceanBaseVectorStoreProperties.class);
-
 				VectorStore vectorStore = context.getBean(VectorStore.class);
 				TestObservationRegistry observationRegistry = context.getBean(TestObservationRegistry.class);
 
@@ -171,7 +170,6 @@ class OceanBaseVectorTest {
 						VectorStoreObservationContext.Operation.QUERY);
 				observationRegistry.clear();
 
-				// Remove all documents from the store
 				vectorStore.delete(this.documents.stream().map(Document::getId).toList());
 
 				Awaitility.await()
@@ -181,6 +179,281 @@ class OceanBaseVectorTest {
 				ObservationTestUtil.assertObservationRegistry(observationRegistry, "oceanbase",
 						VectorStoreObservationContext.Operation.DELETE);
 				observationRegistry.clear();
+			});
+	}
+
+	@Test
+	public void searchWithFilterTest() {
+		this.contextRunner
+			.withPropertyValues("spring.ai.vectorstore.oceanbase.url=" + getJdbcUrl(),
+					"spring.ai.vectorstore.oceanbase.username=" + USERNAME,
+					"spring.ai.vectorstore.oceanbase.password=" + PASSWORD,
+					"spring.ai.vectorstore.oceanbase.tableName=" + OCEANBASE_DATABASE + "_filter")
+			.run(context -> {
+				VectorStore vectorStore = context.getBean(VectorStore.class);
+				TestObservationRegistry observationRegistry = context.getBean(TestObservationRegistry.class);
+
+				assertThat(vectorStore).isInstanceOf(OceanBaseVectorStore.class);
+
+				List<Document> testDocuments = List.of(
+						new Document("1", "Spring AI is a framework", Map.of("category", "framework", "author", "Spring")),
+						new Document("2", "OceanBase is a database", Map.of("category", "database", "author", "OceanBase")),
+						new Document("3", "Java is a programming language", Map.of("category", "language", "author", "Oracle")));
+
+				vectorStore.add(testDocuments);
+
+				Awaitility.await()
+					.until(() -> vectorStore.similaritySearch(SearchRequest.builder().query("framework").topK(1).build()),
+						hasSize(1));
+
+				ObservationTestUtil.assertObservationRegistry(observationRegistry, "oceanbase",
+						VectorStoreObservationContext.Operation.ADD);
+				observationRegistry.clear();
+
+				Filter.Expression filter = new Filter.Expression(Filter.ExpressionType.EQ, new Filter.Key("category"),
+						new Filter.Value("framework"));
+
+				List<Document> results = vectorStore.similaritySearch(SearchRequest.builder()
+					.query("framework")
+					.topK(10)
+					.filterExpression(filter)
+					.build());
+
+				assertThat(results).hasSize(1);
+				assertThat(results.get(0).getMetadata().get("category")).isEqualTo("framework");
+
+				ObservationTestUtil.assertObservationRegistry(observationRegistry, "oceanbase",
+						VectorStoreObservationContext.Operation.QUERY);
+				observationRegistry.clear();
+
+				Filter.Expression neFilter = new Filter.Expression(Filter.ExpressionType.NE, new Filter.Key("category"),
+						new Filter.Value("framework"));
+
+				List<Document> neResults = vectorStore.similaritySearch(SearchRequest.builder()
+					.query("database")
+					.topK(10)
+					.filterExpression(neFilter)
+					.build());
+
+				assertThat(neResults).hasSize(2);
+				assertThat(neResults.stream().noneMatch(doc -> "framework".equals(doc.getMetadata().get("category"))))
+					.isTrue();
+
+				vectorStore.delete(testDocuments.stream().map(Document::getId).toList());
+			});
+	}
+
+	@Test
+	public void searchWithComplexFilterTest() {
+		this.contextRunner
+			.withPropertyValues("spring.ai.vectorstore.oceanbase.url=" + getJdbcUrl(),
+					"spring.ai.vectorstore.oceanbase.username=" + USERNAME,
+					"spring.ai.vectorstore.oceanbase.password=" + PASSWORD,
+					"spring.ai.vectorstore.oceanbase.tableName=" + OCEANBASE_DATABASE + "_complex_filter")
+			.run(context -> {
+				VectorStore vectorStore = context.getBean(VectorStore.class);
+
+				assertThat(vectorStore).isInstanceOf(OceanBaseVectorStore.class);
+
+				List<Document> testDocuments = List.of(
+						new Document("1", "Spring AI framework", Map.of("category", "framework", "author", "Spring", "year", 2024)),
+						new Document("2", "OceanBase database", Map.of("category", "database", "author", "OceanBase", "year", 2023)),
+						new Document("3", "Java language", Map.of("category", "language", "author", "Oracle", "year", 2024)));
+
+				vectorStore.add(testDocuments);
+
+				Awaitility.await()
+					.until(() -> vectorStore.similaritySearch(SearchRequest.builder().query("framework").topK(1).build()),
+							hasSize(1));
+
+				Filter.Expression categoryFilter = new Filter.Expression(Filter.ExpressionType.EQ, new Filter.Key("category"),
+						new Filter.Value("framework"));
+				Filter.Expression authorFilter = new Filter.Expression(Filter.ExpressionType.EQ, new Filter.Key("author"),
+						new Filter.Value("Spring"));
+				Filter.Expression andFilter = new Filter.Expression(Filter.ExpressionType.AND, categoryFilter, authorFilter);
+
+				List<Document> andResults = vectorStore.similaritySearch(SearchRequest.builder()
+					.query("framework")
+					.topK(10)
+					.filterExpression(andFilter)
+					.build());
+
+				assertThat(andResults).hasSize(1);
+				assertThat(andResults.get(0).getMetadata().get("category")).isEqualTo("framework");
+				assertThat(andResults.get(0).getMetadata().get("author")).isEqualTo("Spring");
+
+				Filter.Expression categoryFilter2 = new Filter.Expression(Filter.ExpressionType.EQ, new Filter.Key("category"),
+						new Filter.Value("database"));
+				Filter.Expression orFilter = new Filter.Expression(Filter.ExpressionType.OR, categoryFilter, categoryFilter2);
+
+				List<Document> orResults = vectorStore.similaritySearch(SearchRequest.builder()
+					.query("technology")
+					.topK(10)
+					.filterExpression(orFilter)
+					.build());
+
+				assertThat(orResults).hasSize(2);
+				assertThat(orResults.stream()
+					.allMatch(doc -> "framework".equals(doc.getMetadata().get("category"))
+							|| "database".equals(doc.getMetadata().get("category")))).isTrue();
+
+				vectorStore.delete(testDocuments.stream().map(Document::getId).toList());
+			});
+	}
+
+	@Test
+	public void hybridSearchWithFulltextTest() {
+		this.contextRunner
+			.withPropertyValues("spring.ai.vectorstore.oceanbase.url=" + getJdbcUrl(),
+					"spring.ai.vectorstore.oceanbase.username=" + USERNAME,
+					"spring.ai.vectorstore.oceanbase.password=" + PASSWORD,
+					"spring.ai.vectorstore.oceanbase.tableName=" + OCEANBASE_DATABASE + "_hybrid",
+					"spring.ai.vectorstore.oceanbase.hybridSearchType=fulltext")
+			.run(context -> {
+				VectorStore vectorStore = context.getBean(VectorStore.class);
+
+				assertThat(vectorStore).isInstanceOf(OceanBaseVectorStore.class);
+
+				List<Document> testDocuments = List.of(
+						new Document("1", "Spring AI provides abstractions for developing AI applications",
+								Map.of("category", "framework")),
+						new Document("2", "OceanBase is a distributed database system",
+								Map.of("category", "database")),
+						new Document("3", "Java programming language is widely used",
+								Map.of("category", "language")));
+
+				vectorStore.add(testDocuments);
+
+				Awaitility.await()
+					.until(() -> vectorStore.similaritySearch(SearchRequest.builder().query("Spring").topK(1).build()),
+							hasSize(1));
+
+				List<Document> results = vectorStore.similaritySearch(SearchRequest.builder()
+					.query("Spring AI")
+					.topK(5)
+					.build());
+
+				assertThat(results).isNotEmpty();
+				assertThat(results.stream().anyMatch(doc -> doc.getText().contains("Spring"))).isTrue();
+
+				vectorStore.delete(testDocuments.stream().map(Document::getId).toList());
+			});
+	}
+
+	@Test
+	public void deleteWithFilterExpressionTest() {
+		this.contextRunner
+			.withPropertyValues("spring.ai.vectorstore.oceanbase.url=" + getJdbcUrl(),
+					"spring.ai.vectorstore.oceanbase.username=" + USERNAME,
+					"spring.ai.vectorstore.oceanbase.password=" + PASSWORD,
+					"spring.ai.vectorstore.oceanbase.tableName=" + OCEANBASE_DATABASE + "_delete_filter")
+			.run(context -> {
+				VectorStore vectorStore = context.getBean(VectorStore.class);
+				TestObservationRegistry observationRegistry = context.getBean(TestObservationRegistry.class);
+
+				assertThat(vectorStore).isInstanceOf(OceanBaseVectorStore.class);
+
+				List<Document> testDocuments = List.of(
+						new Document("1", "Spring AI framework", Map.of("category", "framework", "status", "active")),
+						new Document("2", "OceanBase database", Map.of("category", "database", "status", "active")),
+						new Document("3", "Java language", Map.of("category", "language", "status", "inactive")));
+
+				vectorStore.add(testDocuments);
+
+				Awaitility.await()
+					.until(() -> vectorStore.similaritySearch(SearchRequest.builder().query("framework").topK(1).build()),
+						hasSize(1));
+
+				ObservationTestUtil.assertObservationRegistry(observationRegistry, "oceanbase",
+						VectorStoreObservationContext.Operation.ADD);
+				observationRegistry.clear();
+
+				List<Document> allResults = vectorStore
+					.similaritySearch(SearchRequest.builder().query("technology").topK(10).build());
+				assertThat(allResults).hasSize(3);
+
+				ObservationTestUtil.assertObservationRegistry(observationRegistry, "oceanbase",
+						VectorStoreObservationContext.Operation.QUERY);
+				observationRegistry.clear();
+
+				List<Document> inactiveDocs = vectorStore.similaritySearch(
+					SearchRequest.builder()
+						.query("language")
+						.filterExpression(new Filter.Expression(Filter.ExpressionType.EQ, new Filter.Key("status"),
+							new Filter.Value("inactive")))
+						.topK(10)
+						.build());
+				assertThat(inactiveDocs).hasSize(1);
+				String inactiveDocId = inactiveDocs.get(0).getId();
+
+				observationRegistry.clear();
+
+				vectorStore.delete(List.of(inactiveDocId));
+
+				ObservationTestUtil.assertObservationRegistry(observationRegistry, "oceanbase",
+						VectorStoreObservationContext.Operation.DELETE);
+				observationRegistry.clear();
+
+				List<Document> remainingResults = vectorStore
+					.similaritySearch(SearchRequest.builder().query("technology").topK(10).build());
+				assertThat(remainingResults).hasSize(2);
+
+				vectorStore.delete(testDocuments.stream().map(Document::getId).toList());
+			});
+	}
+
+	@Test
+	public void searchWithInFilterTest() {
+		this.contextRunner
+			.withPropertyValues("spring.ai.vectorstore.oceanbase.url=" + getJdbcUrl(),
+					"spring.ai.vectorstore.oceanbase.username=" + USERNAME,
+					"spring.ai.vectorstore.oceanbase.password=" + PASSWORD,
+					"spring.ai.vectorstore.oceanbase.tableName=" + OCEANBASE_DATABASE + "_in_filter")
+			.run(context -> {
+				VectorStore vectorStore = context.getBean(VectorStore.class);
+
+				assertThat(vectorStore).isInstanceOf(OceanBaseVectorStore.class);
+
+				List<Document> testDocuments = List.of(
+						new Document("1", "Spring AI framework", Map.of("category", "framework")),
+						new Document("2", "OceanBase database", Map.of("category", "database")),
+						new Document("3", "Java language", Map.of("category", "language")),
+						new Document("4", "Python language", Map.of("category", "language")));
+
+				vectorStore.add(testDocuments);
+
+				Awaitility.await()
+					.until(() -> vectorStore.similaritySearch(SearchRequest.builder().query("framework").topK(1).build()),
+							hasSize(1));
+
+				Filter.Expression inFilter = new Filter.Expression(Filter.ExpressionType.IN, new Filter.Key("category"),
+						new Filter.Value(List.of("framework", "database")));
+
+				List<Document> inResults = vectorStore.similaritySearch(SearchRequest.builder()
+					.query("technology")
+					.topK(10)
+					.filterExpression(inFilter)
+					.build());
+
+				assertThat(inResults).hasSize(2);
+				assertThat(inResults.stream()
+					.allMatch(doc -> "framework".equals(doc.getMetadata().get("category"))
+							|| "database".equals(doc.getMetadata().get("category")))).isTrue();
+
+				Filter.Expression ninFilter = new Filter.Expression(Filter.ExpressionType.NIN, new Filter.Key("category"),
+						new Filter.Value(List.of("framework", "database")));
+
+				List<Document> ninResults = vectorStore.similaritySearch(SearchRequest.builder()
+					.query("programming")
+					.topK(10)
+					.filterExpression(ninFilter)
+					.build());
+
+				assertThat(ninResults).hasSize(2);
+				assertThat(ninResults.stream()
+					.allMatch(doc -> "language".equals(doc.getMetadata().get("category")))).isTrue();
+
+				vectorStore.delete(testDocuments.stream().map(Document::getId).toList());
 			});
 	}
 
@@ -222,21 +495,22 @@ class OceanBaseVectorTest {
 				+ OCEANBASE_DATABASE;
 	}
 
+	@SuppressWarnings("resource")
 	private OceanBaseCEContainer initOceanbaseContainer() {
 		return new OceanBaseCEContainer(IMAGE).withEnv("MODE", "slim")
 			.withEnv("OB_DATAFILE_SIZE", "2G")
 			.withNetwork(NETWORK)
 			.withNetworkAliases(HOSTNAME)
 			.withExposedPorts(PORT)
-			.withImagePullPolicy(PullPolicy.alwaysPull())
+			.withImagePullPolicy(PullPolicy.defaultPolicy())
 			.waitingFor(Wait.forLogMessage(".*boot success!.*", 1))
 			.withStartupTimeout(Duration.ofMinutes(5))
 			.withLogConsumer(new Slf4jLogConsumer(DockerLoggerFactory.getLogger(IMAGE)));
 	}
 
 	private void initializeJdbcConnection(String jdbcUrl)
-			throws SQLException, InstantiationException, IllegalAccessException {
-		Driver driver = (Driver) loadDriverClass().newInstance();
+			throws SQLException, InstantiationException, IllegalAccessException, java.lang.reflect.InvocationTargetException, NoSuchMethodException {
+		Driver driver = (Driver) loadDriverClass().getDeclaredConstructor().newInstance();
 		Properties props = new Properties();
 
 		props.put("user", USERNAME);
